Closed Bug 129908 Opened 23 years ago Closed 23 years ago

[PATCH]Partially decoded background images should not be painted

Categories

(Core Graveyard :: GFX, defect, P1)

defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.0

People

(Reporter: kmcclusk, Assigned: kmcclusk)

References

Details

Attachments

(2 files, 1 obsolete file)

Since we do not incrementally display background images as image data arrives we should not display partially decoded background images when painting damaged areas, We should wait until they are fully loaded before painting them. Expected: If you move a window over the browser while it is loading a page with a background image it should not display the background image. What happens: If you move a window over the browser while it is loading a page with a background image it displays the partially decoded background image in the locations where the window was moved over the browser.
Move a window over the top of the browser window while it loads the test case and you will see a partially decoded image in the locations where you have moved the window over the browser window.
OS: Windows 2000 → All
The patch seems like the obvious fix but it does not work correctly. The background image is not displayed. the LOAD_COMPLETE status must be set after the paint is processed as the result of the OnStopFrame in nsImageLoader?
LOAD_COMPLETE is set after OnStopDecode. from a quick glance over the code, it looks like it could be set before the call to OnStopDecode, but I will have to investigate further.
Keywords: nsbeta1
Priority: -- → P1
Target Milestone: --- → Future
Instead of changing where STATUS_LOAD_COMPLETE is set I added a new STATUS_FRAME_COMPLETE flag which gets set before calling OnStopFrame. I think it may be too risky to change anything having to do with STATUS_LOAD_COMPLETE so close to Mozilla1.0.
Attachment #73424 - Attachment is obsolete: true
nsbeta1+. Very visible defect on a large number of sites.
Keywords: nsbeta1nsbeta1+
Target Milestone: Future → mozilla1.0
Comment on attachment 75331 [details] [diff] [review] Patch which adds a new STATUS_FRAME_COMPLETE flag for the image request and checks for this flag before painting background images sr=attinasi
Attachment #75331 - Flags: superreview+
Keywords: review
Summary: Partially decoded background images should not be painted → [PATCH]Partially decoded background images should not be painted
Keywords: approval
Comment on attachment 75331 [details] [diff] [review] Patch which adds a new STATUS_FRAME_COMPLETE flag for the image request and checks for this flag before painting background images r=pavlov
Attachment #75331 - Flags: review+
Comment on attachment 75331 [details] [diff] [review] Patch which adds a new STATUS_FRAME_COMPLETE flag for the image request and checks for this flag before painting background images a=asa (on behalf of drivers) for checkin to the 1.0 trunk
Attachment #75331 - Flags: approval+
Checked patch into trunk.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
*** Bug 132473 has been marked as a duplicate of this bug. ***
Marking verified in the April 23rd trunk OS X (2002-04-23-08) and Windows ME (2002-04-23-06) builds
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: