suppress the painting of partially decoded background images bug 129908; r=pavlov sr=attinasi a=asa